gccida/g2/find_reg_fusage
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reg_fusage/src/rtlanal.c:2313:33: error: must use 'enum' tag to refer to type 'rtx_code'
int  find_reg_fusage( rtx insn, rtx_code code, rtx datum) 
                                ^
                                enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reg_fusage/src/rtlanal.c:2338:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v10 = ( ( unsigned int)( mode_class_0[v8] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reg_fusage/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reg_fusage/src/rtlanal.c:2368:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v5 = ( __int64)insn[4]; 
               ^~~~~~~
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reg_fusage/src/obj/rtlanal.o] Error 1
